Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3894

sanity test_214: FAIL: mv /mnt/lustre/d214p/d214c /mnt/lustre/ failed

XMLWordPrintable

    • 3
    • 10168

      sanity test 214 failed as follows:

      == sanity test 214: hash-indexed directory test - bug 20133 == 12:06:27 (1378148787)
      mkdir 2 for /mnt/lustre/d214p/d214c
      total 5
      drwxr-xr-x 2 root root 4608 Sep  2 12:06 d214c
      mv: cannot move `/mnt/lustre/d214p/d214c' to `/mnt/lustre/d214c': File exists
       sanity test_214: @@@@@@ FAIL: mv /mnt/lustre/d214p/d214c /mnt/lustre/ failed 
      

      Maloo report: https://maloo.whamcloud.com/test_sets/86425a8c-1641-11e3-aa2a-52540035b04c

            di.wang Di Wang (Inactive)
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: